@@ -8,7 +8,7 @@
 
 namespace Atlas { namespace Message {
 
-Encoder::Encoder(Atlas::Bridge* b)
+Encoder::Encoder(Atlas::Bridge & b)
     : EncoderBase(b)
 {
 }
@@ -20,25 +20,25 @@ Encoder::~Encoder()
 void Encoder::listElementItem(const Element& obj)
 {
     switch (obj.getType()) {
-        case Element::TYPE_INT: m_bridge->listIntItem(obj.asInt()); break;
-        case Element::TYPE_FLOAT: m_bridge->listFloatItem(obj.asFloat()); break;
-        case Element::TYPE_STRING: m_bridge->listStringItem(obj.asString()); break;
+        case Element::TYPE_INT: m_b.listIntItem(obj.asInt()); break;
+        case Element::TYPE_FLOAT: m_b.listFloatItem(obj.asFloat()); break;
+        case Element::TYPE_STRING: m_b.listStringItem(obj.asString()); break;
         case Element::TYPE_MAP: {
-            m_bridge->listMapItem();
+            m_b.listMapItem();
             Element::MapType::const_iterator I;
             for (I = obj.asMap().begin(); I != obj.asMap().end(); I++) {
                 mapElementItem((*I).first, (*I).second);
 	    }
-            m_bridge->mapEnd();
+            m_b.mapEnd();
             }
             break;
         case Element::TYPE_LIST: {
-            m_bridge->listListItem();
+            m_b.listListItem();
             Element::ListType::const_iterator I;
             for (I = obj.asList().begin(); I != obj.asList().end(); I++) {
                 listElementItem(*I);
 	    }
-            m_bridge->listEnd();
+            m_b.listEnd();
             }
             break;
         default: break;
@@ -47,46 +47,46 @@ void Encoder::listElementItem(const Element& obj)
 
 void Encoder::listElementMapItem(const Element::MapType& obj)
 {
-    m_bridge->listMapItem();
+    m_b.listMapItem();
     Element::MapType::const_iterator I;
     for (I = obj.begin(); I != obj.end(); I++) {
         mapElementItem(I->first, I->second);
     }
-    m_bridge->mapEnd();
+    m_b.mapEnd();
 }
 
 void Encoder::listElementListItem(const Element::ListType& obj)
 {
-    m_bridge->listListItem();
+    m_b.listListItem();
     Element::ListType::const_iterator I;
     for (I = obj.begin(); I != obj.end(); I++) {
         listElementItem(*I);
     }
-    m_bridge->listEnd();    
+    m_b.listEnd();    
 }
 
 void Encoder::mapElementItem(const std::string& name, const Element& obj)
 {
     switch (obj.getType()) {
-        case Element::TYPE_INT: m_bridge->mapIntItem(name, obj.asInt()); break;
-        case Element::TYPE_FLOAT: m_bridge->mapFloatItem(name, obj.asFloat()); break;
-        case Element::TYPE_STRING: m_bridge->mapStringItem(name, obj.asString()); break;
+        case Element::TYPE_INT: m_b.mapIntItem(name, obj.asInt()); break;
+        case Element::TYPE_FLOAT: m_b.mapFloatItem(name, obj.asFloat()); break;
+        case Element::TYPE_STRING: m_b.mapStringItem(name, obj.asString()); break;
         case Element::TYPE_MAP: {
-            m_bridge->mapMapItem(name);
+            m_b.mapMapItem(name);
             Element::MapType::const_iterator I;
             for (I = obj.asMap().begin(); I != obj.asMap().end(); I++) {
                 mapElementItem((*I).first, (*I).second);
 	    }
-            m_bridge->mapEnd();
+            m_b.mapEnd();
             }
             break;
         case Element::TYPE_LIST: {
-            m_bridge->mapListItem(name);
+            m_b.mapListItem(name);
             Element::ListType::const_iterator I;
             for (I = obj.asList().begin(); I != obj.asList().end(); I++) {
                 listElementItem(*I);
 	    }
-            m_bridge->listEnd();
+            m_b.listEnd();
             }
             break;
         default:
@@ -96,32 +96,32 @@ void Encoder::mapElementItem(const std::string& name, const Element& obj)
 
 void Encoder::mapElementMapItem(const std::string& name, const Element::MapType& obj)
 {
-    m_bridge->mapMapItem(name);
+    m_b.mapMapItem(name);
     Element::MapType::const_iterator I;
     for (I = obj.begin(); I != obj.end(); I++) {
         mapElementItem((*I).first, (*I).second);
     }
-    m_bridge->mapEnd();
+    m_b.mapEnd();
 }
 
 void Encoder::mapElementListItem(const std::string& name, const Element::ListType& obj)
 {
-    m_bridge->mapListItem(name);
+    m_b.mapListItem(name);
     Element::ListType::const_iterator I;
     for (I = obj.begin(); I != obj.end(); I++) {
         listElementItem(*I);
     }
-    m_bridge->listEnd();
+    m_b.listEnd();
 }
 
 void Encoder::streamMessageElement(const Element::MapType& obj)
 {
-    m_bridge->streamMessage();
+    m_b.streamMessage();
     Element::MapType::const_iterator I;
     for (I = obj.begin(); I != obj.end(); I++) {
         mapElementItem((*I).first, (*I).second);
     }
-    m_bridge->mapEnd();
+    m_b.mapEnd();
 }
 
 } } // namespace Atlas::Message
